Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-24700

Android Manifest editor not adding icon to manifest upon saving

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • Qt Creator 4.13.3
    • Qt Creator 4.13.0
    • Android Support
    • None
    • Android
    • 2020wk40

      When adding icons via the Android Manifest editor widget and saving, the icon field is not added to the manifest file, only the icons are copied to the android package dir. I had to go into XML mode and save for the change to happen, and without it, the app doesn't have an icon when deployed.

        For Gerrit Dashboard: QTCREATORBUG-24700
        # Subject Branch Project Status CR V

            villevoutilainen_qt Ville Voutilainen
            assam Assam Boudjelthia
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes