src/plugins/android/androidmanifesteditoriconcontainerwidget.cpp
@@ -99,10 +99,22 @@ AndroidManifestEditorIconContainerWidget::AndroidManifestEditorIconContainerWidg
     m_iconButtons.push_back(hIconButton);
     iconLayout->addStretch(6);
 
+    auto handleIconModification = [this] {
+        bool iconsMaybeChanged = hasIcons();
+        if (m_hasIcons != iconsMaybeChanged)
+            iconsModified();
+        m_hasIcons = iconsMaybeChanged;
+    };
     for (auto &&iconButton : m_iconButtons) {
         connect(masterIconButton, &AndroidManifestEditorIconWidget::iconSelected,
                 iconButton, &AndroidManifestEditorIconWidget::setIconFromPath);
+        connect(iconButton, &AndroidManifestEditorIconWidget::iconRemoved,
+                this, handleIconModification);
+        connect(iconButton, &AndroidManifestEditorIconWidget::iconSelected,
+                this, handleIconModification);
     }
+    connect(masterIconButton, &AndroidManifestEditorIconWidget::iconSelected,
+            this, handleIconModification);
 }
 
 void AndroidManifestEditorIconContainerWidget::setIconFileName(const QString &name)
@@ -121,6 +133,7 @@ void AndroidManifestEditorIconContainerWidget::loadIcons()
         iconButton->setTargetIconFileName(m_iconFileName + imageSuffix);
         iconButton->loadIcon();
     }
+    m_hasIcons = hasIcons();
 }
 
 bool AndroidManifestEditorIconContainerWidget::hasIcons() const
